syntax = "proto3";

package rplus.loyalty.events;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "rplus/loyalty/events;events";
option csharp_namespace = "RPlusGrpc.Loyalty.Events";
option java_multiple_files = true;
option java_package = "com.rplus.loyalty.events";
option java_outer_classname = "LoyaltyEventsProto";

service LoyaltyEventsService {
  // Event ingestion
  rpc EmitEvent(EmitEventRequest) returns (EmitEventResponse);

  // Batch events (optional, but useful)
  rpc EmitEvents(EmitEventsRequest) returns (EmitEventsResponse);

  // Query running status (optional)
  rpc GetEventStatus(GetEventStatusRequest) returns (GetEventStatusResponse);
}

// =========================
// Event ingestion
// =========================

message EmitEventRequest {
  string event_name = 1;
  google.protobuf.Struct payload = 2;
  string correlation_id = 3;
  string actor_id = 4;
}

message EmitEventResponse {
  bool accepted = 1;
  string event_id = 2;
  string message = 3;
}

message EmitEventsRequest {
  repeated EmitEventRequest events = 1;
}

message EmitEventsResponse {
  repeated EmitEventResponse results = 1;
}

// =========================
// Event status
// =========================

message GetEventStatusRequest {
  string event_id = 1;
}

enum EventStatus {
  STATUS_UNSPECIFIED = 0;
  RECEIVED = 1;
  PROCESSING = 2;
  COMPLETED = 3;
  FAILED = 4;
}

message GetEventStatusResponse {
  string event_id = 1;
  EventStatus status = 2;
  string error_message = 3;
  google.protobuf.Timestamp updated_at = 4;
}
